[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/fTSCN/fUI/nBaseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/fTSCN/fDebug/nDebugDraw.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Script/fActor/fStoreActor/gHouseCloset.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 188.693

[node name="nStoreNODE" type="Node2D"]
script = ExtResource( 3 )
itemStore = [ "apple" ]

[node name="nDebugDraw" parent="." instance=ExtResource( 2 )]
isDrawCbox = true

[node name="cBox" parent="nDebugDraw" index="1"]
margin_left = -65.0
margin_top = -103.0
margin_right = 50.0
margin_bottom = 75.0

[node name="Line2D" parent="nDebugDraw" index="2"]
points = PoolVector2Array( 84.7565, -150.89 )
default_color = Color( 0.780392, 0.211765, 0.666667, 1 )

[node name="area" type="Area2D" parent="."]
visible = false

[node name="shape" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[node name="nUI" type="Node2D" parent="."]

[node name="seachButton" parent="nUI" instance=ExtResource( 1 )]
margin_left = -25.6136
margin_top = 49.0786
margin_right = 21.3864
margin_bottom = 69.0786
text = "seach"

[node name="nameLable" type="RichTextLabel" parent="nUI"]
margin_left = -44.1622
margin_top = -125.595
margin_right = 34.8378
margin_bottom = -108.595
bbcode_enabled = true
bbcode_text = "name"
text = "name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="pressed" from="nUI/seachButton" to="." method="_on_seachButton_pressed"]

[editable path="nDebugDraw"]
